tests/sawn/fixtures/invalid/33_bare_reserved_column_name.sawn
// §3.5: Reserved words as bare column names are a parse error
data[][] name,true,score
  "Alice",1,100
